// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 3 expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $1,142.0
  </h1>
</div>
`;

exports[`should render ExpensesSummary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1,095.0
  </h1>
</div>
`;
